--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "author": "Tarang Sachdev <tarang.smartsense@gmail.com>",
   "license": "MIT",
-  
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
@@ -27,6 +26,7 @@
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -48,6 +48,6 @@
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
-    "webpack-dev-server": "2.5.1"    
+    "webpack-dev-server": "2.5.1"
   }
 }
